--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col" style="background-color: maroon; height: 500px;">
+        <h1>CINDY</h1>
       </div>
     </div>
   </div>
