--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col" style="background-color: maroon; height: 500px;">
+        <h1 style="color:white; text-align:center">JEROME :DDD</h1>
         <h1> Jermaine ituuu</h1>
       </div>
     </div>
