--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <div class="col p-5" style="background-color: green;">
         <h1 class="display-2 text-center" style="color: white">
           This is a footer
+          <h1 style="color:white; text-align:center">JEROME :DDD</h1>
         </h1>
       </div>
     </div>
