--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-<<<<<<< HEAD
-      <div class="col" style="background-color: maroon; height: 500px;"> 
 =======
       <div class="col" style="background-color: maroon; height: 500px;">
-        <h2>Ako si <br> Chan</h2>
         <p>Kent</p>
         <h1>CINDY</h1>
         <h1> Jermaine ituuu</h1>
+        <h1> joseph ituuu</h1>
+
       </div>
     </div>
   </div>
